Add registration admission policy
